src/QLabel.h


// 
// This file has been automatically generated by RaQt_maker V0.0.6.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQLabelCtor_1(void * parent, int  f);
EXTERNC void * SCWQLabelCtor_1(void * parent, int  f);
EXTERNC void * QWQLabelCtor_2(char * text, void * parent, int  f);
EXTERNC void * SCWQLabelCtor_2(char * text, void * parent, int  f);
EXTERNC void QWQLabeltext(void * retBuffer, void * obj);
EXTERNC void QWQLabelsetTextFormat(void * obj, int  arg1);
EXTERNC void QWQLabelsetAlignment(void * obj, int  arg1);
EXTERNC void QWQLabelsetMargin(void * obj, int32_t  arg1);
EXTERNC void QWQLabelsetText(void * obj, char * arg1);
EXTERNC void QWQLabelclear(void * obj);
EXTERNC void QWvalidateCB_QLabel(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQLabelDtor(void *);
EXTERNC void SCWQLabelDtor(void *);